src/objects/Eboard_Candidate__c.object
<CustomObject>
    <description>Contains E Board Candidates</description>
    <fields>
        <fullName>AAA_Ballot_No__c</fullName>
        <label>AAA Ballot No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Needed__c</fullName>
        <label>Action Needed</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_City__c</fullName>
        <label>Alternate City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_First_Name__c</fullName>
        <label>Alternate First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Last_Name__c</fullName>
        <label>Alternate Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_State__c</fullName>
        <label>Alternate State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Street__c</fullName>
        <label>Alternate Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Zip__c</fullName>
        <label>Alternate Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ballot_First_Name__c</fullName>
        <formula>IF( Use_Alt_Name__c =TRUE,   Alternate_First_Name__c,  Member__r.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ballot First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ballot_Last_Name__c</fullName>
        <formula>IF( Use_Alt_Name__c =TRUE, Alternate_Last_Name__c, Member__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ballot Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ballot_Name__c</fullName>
        <formula>IF( Use_Alt_Name__c =TRUE,   Alternate_First_Name__c &amp; &apos; &apos; &amp;  Alternate_Last_Name__c,  Member__r.FirstName &amp; &apos; &apos; &amp; Member__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ballot Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Address__c</fullName>
        <formula>IF( Use_Alt_Address__c =TRUE,  Alternate_Street__c  &amp; &apos; &apos; &amp;  Alternate_City__c  &amp; &apos;, &apos; &amp;  Alternate_State__c  &amp; &apos; &apos; &amp;  Alternate_Zip__c ,  Member__r.MailingStreet &amp; &apos; &apos; &amp;  Member__r.MailingCity &amp; &apos;, &apos; &amp;  Member__r.MailingState &amp; &apos; &apos; &amp;  Member__r.MailingPostalCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_City__c</fullName>
        <formula>IF(Use_Alt_Address__c=TRUE,  Alternate_City__c ,  Member__r.MailingCity )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Email__c</fullName>
        <formula>IF( Use_Alt_Email__c =TRUE,  Alternate_Email__c, Member__r.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Phone__c</fullName>
        <formula>IF( Use_Alt_Phone__c =TRUE,   Alternate_Phone__c  ,  Member__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_State__c</fullName>
        <formula>IF(Use_Alt_Address__c=TRUE,   Alternate_State__c  ,   Member__r.MailingState  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Street__c</fullName>
        <formula>IF(Use_Alt_Address__c=TRUE,  Alternate_Street__c ,  Member__r.MailingStreet )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Zip__c</fullName>
        <formula>IF(Use_Alt_Address__c=TRUE,   Alternate_Zip__c ,  Member__r.MailingPostalCode  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Best Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Office_Title__c</fullName>
        <label>Candidate Office Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Executive Committee-Union Wide</fullName>
                </value>
                <value>
                    <fullName>Executive Committee-Hospital</fullName>
                </value>
                <value>
                    <fullName>Executive Committee-Kaiser</fullName>
                </value>
                <value>
                    <fullName>Ethics Committee-Hospital</fullName>
                </value>
                <value>
                    <fullName>Ethics Committee-Kaiser</fullName>
                </value>
                <value>
                    <fullName>Finance Committee-Hospital</fullName>
                </value>
                <value>
                    <fullName>Finance Committee-Kaiser</fullName>
                </value>
                <value>
                    <fullName>Executive Board-Hospital</fullName>
                </value>
                <value>
                    <fullName>Executive Board-Kaiser</fullName>
                </value>
                <value>
                    <fullName>Executive Board-Hospital Retiree</fullName>
                </value>
                <value>
                    <fullName>Executive Board-Kaiser Retiree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Seated_Date__c</fullName>
        <label>Candidate Seated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Candidate_Seated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Candidate Seated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a candidate statement submitted with the form and petition? Or has it been submitted by email?</description>
        <inlineHelpText>Is a candidate statement submitted with the form and petition? Or has it been submitted by email?</inlineHelpText>
        <label>Candidate Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate_Type__c</fullName>
        <label>Candidate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ECom</fullName>
                </value>
                <value>
                    <fullName>EBoard</fullName>
                </value>
                <value>
                    <fullName>Union Wide</fullName>
                </value>
                <value>
                    <fullName>Ethics</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constituency_Name1__c</fullName>
        <label>Constituency Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Constituency__c.Constituency_Year__c</field>
                <operation>equals</operation>
                <value>2017</value>
            </filterItems>
            <infoMessage>Enter Constituency for 2017 only.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Constituency__c</referenceTo>
        <relationshipLabel>Eboard Candidates</relationshipLabel>
        <relationshipName>Eboard_Candidates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Constituency__c</fullName>
        <formula>Constituency_Name1__r.ConstituencyName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constituency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <formula>Member__r.Account.Coordinator__r.FirstName &amp; &quot; &quot; &amp; Member__r.Account.Coordinator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Processed__c</fullName>
        <description>Date processed by Membership</description>
        <inlineHelpText>Date processed by Membership</inlineHelpText>
        <label>Date Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District_2017__c</fullName>
        <description>This is the current district (2017) from the Contact object.</description>
        <formula>IF( Member__r.Employer1__c =&quot;SEIU-UHW&quot;, &quot;Union Wide&quot;, Member__r.District_Name_2017__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District 2017</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is a lookup id from District - to preserve the data for history. The District 2017 is a formula field.</description>
        <label>District</label>
        <referenceTo>Constituency__c</referenceTo>
        <relationshipLabel>Eboard Candidates (District)</relationshipLabel>
        <relationshipName>Eboard_Candidates1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_AA_Email__c</fullName>
        <label>Division AA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Division_Director_Email__c</fullName>
        <label>Division Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Member__r.Division_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eboard_Seat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current Occupied EBS (from EboardSeats Object)</description>
        <inlineHelpText>Current Occupied EBS (from EboardSeats Object)</inlineHelpText>
        <label>EBoard Seat</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EBoardSeats__c.E_Board_Year__c</field>
                <operation>equals</operation>
                <value>2017</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EBoardSeats__c</referenceTo>
        <relationshipLabel>Eboard Candidates</relationshipLabel>
        <relationshipName>Eboard_Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Elected__c</fullName>
        <formula>IF( ISBLANK( Instated_To_Office__c ) , FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Election_Committee_Comments__c</fullName>
        <label>Election Committee Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Election_Date__c</fullName>
        <description>Election Day</description>
        <inlineHelpText>Election Day</inlineHelpText>
        <label>Election Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_No__c</fullName>
        <formula>Member__r.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_ID__c</fullName>
        <formula>Member__r.Employer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <formula>Member__r.Employer1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Title__c</fullName>
        <formula>CASE( Candidate_Office_Title__c , &quot;President&quot;, &quot;President&quot;, 
&quot;Vice President&quot;, &quot;Vice President&quot;,
&quot;Executive Committee-Union Wide&quot;, &quot;Executive Committee - Union-wide&quot;,
&quot;Executive Committee-Hospital&quot;, &quot;Executive Committee&quot;,
&quot;Executive Committee-Kaiser&quot;, &quot;Executive Committee&quot;,
&quot;Ethics Committee-Hospital&quot;, &quot;Ethics Officer&quot;,
&quot;Ethics Committee-Kaiser&quot;, &quot;Ethics Officer&quot;,
&quot;Finance Committee-Hospital&quot;, &quot;Finance Officer&quot;,
&quot;Finance Committee-Kaiser&quot;, &quot;Finance Officer&quot;,
&quot;Executive Board-Kaiser&quot;, &quot;Executive Board&quot;,
&quot;Executive Board-Hospital&quot;, &quot;Executive Board&quot;,
&quot;Executive Board-Hospital Retiree&quot;, &quot;Hospital Retiree&quot;,
&quot;Executive Board-Kaiser Retiree&quot;, &quot;Kaiser Retiree&quot;,
&quot;Unknown&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Time_Elected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Time Elected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_a_photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has a photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instated_To_Office__c</fullName>
        <description>help identify when seats are vacant since some seats are occupied by more than one person</description>
        <inlineHelpText>help identify when seats are vacant since some seats are occupied by more than one person</inlineHelpText>
        <label>Instated To Office</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Make_Candidate_Date__c</fullName>
        <description>to be completed by Membership</description>
        <inlineHelpText>to be completed by Membership</inlineHelpText>
        <label>Make Candidate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Make_Candidate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to be completed by Membership</description>
        <inlineHelpText>to be completed by Membership</inlineHelpText>
        <label>Make Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <formula>Member__r.MemberID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Eboard Candidates</relationshipLabel>
        <relationshipName>Eboard_Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership_Employer_Id__c</fullName>
        <formula>Member__r.Account.Membership_Employer_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Employer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <label>Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Form_Date_Received__c</fullName>
        <label>Nomination Form Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nomination_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is it included, completely filled out and signed?</description>
        <inlineHelpText>Is it included, completely filled out and signed?</inlineHelpText>
        <label>Nomination Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Petition_Signed_Date__c</fullName>
        <label>Nomination Petition Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nomination_Petition_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>did nomineed(s) sign the petition? (must sign at least one petition)</description>
        <inlineHelpText>did nomineed(s) sign the petition? (must sign at least one petition)</inlineHelpText>
        <label>Nomination Petition Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Petition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is it the correct petition for the office? Does it match the nomination form?</description>
        <inlineHelpText>Is it the correct petition for the office? Does it match the nomination form?</inlineHelpText>
        <label>Nomination Petition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Status__c</fullName>
        <label>Nomination Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Of_Signatures__c</fullName>
        <label>Number Of Signatures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Photo_URL__c</fullName>
        <label>Photo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <formula>IF(ISBLANK( Photo_URL__c  ), &quot;&quot;, IMAGE(Photo_URL__c,   Ballot_Name__c  ,150,150))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Eboard_Seat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Previous Occupied EBS (from EboardSeats Object)</description>
        <inlineHelpText>Previous Occupied EBS (from EboardSeats Object)</inlineHelpText>
        <label>Previous Eboard Seat</label>
        <referenceTo>EBoardSeats__c</referenceTo>
        <relationshipLabel>Eboard Candidates (Previous Eboard Seats)</relationshipLabel>
        <relationshipName>Eboard_Candidates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Eboard_Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <label>Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reg_Dir_Email__c</fullName>
        <formula>Member__r.Account.Regional_Director__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reg Dir Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Director_Email__c</fullName>
        <label>Regional Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Removed_From_Office__c</fullName>
        <label>Removed From Office</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Removed__c</fullName>
        <formula>IF( NOT ISBLANK(Removed_From_Office__c) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resigned_From_Office__c</fullName>
        <label>Resigned From Office</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resigned_Removed_Date__c</fullName>
        <formula>IF( AND(NOT ISBLANK(Removed_From_Office__c),ISBLANK( Resigned_From_Office__c )), Removed_From_Office__c,  IF(AND(NOT ISBLANK(Resigned_From_Office__c),ISBLANK( Removed_From_Office__c)), Resigned_From_Office__c, NULL) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resigned/Removed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resigned_Removed_Reason__c</fullName>
        <label>Resigned/Removed Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resigned__c</fullName>
        <formula>IF( NOT ISBLANK( Resigned_From_Office__c ) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seat_Unseat__c</fullName>
        <label>Seat/Unseat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Seated</fullName>
                </value>
                <value>
                    <fullName>Unseated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signatures_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signatures Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slate__c</fullName>
        <label>Slate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cedars-Sinai-UHW</fullName>
                </value>
                <value>
                    <fullName>D7!</fullName>
                </value>
                <value>
                    <fullName>Healthcare Justice</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>SEIU-UHW MUST (Members United for Strength)</fullName>
                </value>
                <value>
                    <fullName>SEIU-UHW ‘TRIUMPH&apos; (Trust, Results, Integrity, Unity, Membership, Purpose, Honesty)</fullName>
                </value>
                <value>
                    <fullName>SEIU UNITED Membership</fullName>
                </value>
                <value>
                    <fullName>Team Batman</fullName>
                </value>
                <value>
                    <fullName>Time For A Change</fullName>
                </value>
                <value>
                    <fullName>United Membership</fullName>
                </value>
                <value>
                    <fullName>We Are Your Voice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF( Elected__c = TRUE, IF( First_Time_Elected__c =TRUE, &quot;First Time Elected&quot;, &quot;Previously Elected&quot;), &quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Alt_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Alt Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Alt_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Alt Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Alt_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Alt Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Alt_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Alt Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Votes__c</fullName>
        <description>records how many votes this person received, whether they won their election or not</description>
        <inlineHelpText>records how many votes this person received, whether they won their election or not</inlineHelpText>
        <label>Votes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Eboard Candidate</label>
    <listViews>
        <fullName>All_Elected_Candidates</fullName>
        <columns>Division__c</columns>
        <columns>Division_Director_Email__c</columns>
        <columns>Regional_Director_Email__c</columns>
        <columns>Reg_Dir_Email__c</columns>
        <columns>NAME</columns>
        <columns>Ballot_Name__c</columns>
        <columns>Instated_To_Office__c</columns>
        <columns>Elected__c</columns>
        <columns>Constituency_Name1__c</columns>
        <columns>Employer__c</columns>
        <columns>Candidate_Office_Title__c</columns>
        <columns>District_2017__c</columns>
        <columns>Constituency__c</columns>
        <columns>Slate__c</columns>
        <columns>Action_Needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>EC-0009</value>
        </filters>
        <filters>
            <field>Nomination_Status__c</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>Elected__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Elected Candidates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Qualified_Eboard_Candidates</fullName>
        <columns>District__c</columns>
        <columns>NAME</columns>
        <columns>Ballot_Name__c</columns>
        <columns>Instated_To_Office__c</columns>
        <columns>Employer__c</columns>
        <columns>Candidate_Office_Title__c</columns>
        <columns>District_2017__c</columns>
        <columns>Constituency_Name1__c</columns>
        <columns>Nomination_Status__c</columns>
        <columns>Action_Needed__c</columns>
        <columns>Constituency__c</columns>
        <columns>Email_Sent__c</columns>
        <columns>Division__c</columns>
        <columns>Slate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>EC-0009</value>
        </filters>
        <filters>
            <field>Nomination_Status__c</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <label>All Qualified Eboard Candidates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Removed_Resigned_Eboard</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Ballot_Name__c</columns>
        <columns>Instated_To_Office__c</columns>
        <columns>Elected__c</columns>
        <columns>Constituency_Name1__c</columns>
        <columns>Employer__c</columns>
        <columns>Candidate_Office_Title__c</columns>
        <columns>Division__c</columns>
        <columns>District_2017__c</columns>
        <columns>Constituency__c</columns>
        <columns>Slate__c</columns>
        <columns>Action_Needed__c</columns>
        <columns>Resigned_Removed_Date__c</columns>
        <columns>Division_Director_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>EC-0009</value>
        </filters>
        <filters>
            <field>Nomination_Status__c</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>Elected__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Removed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Resigned__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Removed-Resigned Eboard</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_Vacancy_Election_1</fullName>
        <columns>NAME</columns>
        <columns>Ballot_Name__c</columns>
        <columns>Employer__c</columns>
        <columns>Nomination_Status__c</columns>
        <columns>Action_Needed__c</columns>
        <columns>Candidate_Office_Title__c</columns>
        <columns>District_2017__c</columns>
        <columns>Constituency__c</columns>
        <columns>Constituency_Name1__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>EC-0009</value>
        </filters>
        <filters>
            <field>Election_Date__c</field>
            <operation>equals</operation>
            <value>7/22/2017</value>
        </filters>
        <label>2017 Vacancy Election -1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_Vacancy_Election_2</fullName>
        <columns>NAME</columns>
        <columns>Ballot_Name__c</columns>
        <columns>Employer__c</columns>
        <columns>Nomination_Status__c</columns>
        <columns>Action_Needed__c</columns>
        <columns>Candidate_Office_Title__c</columns>
        <columns>District_2017__c</columns>
        <columns>Constituency__c</columns>
        <columns>Constituency_Name1__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>EC-0009</value>
        </filters>
        <filters>
            <field>Election_Date__c</field>
            <operation>equals</operation>
            <value>10/28/2017</value>
        </filters>
        <label>2017 Vacancy Election -2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2018_Vacancy_Election_1</fullName>
        <columns>NAME</columns>
        <columns>Ballot_Name__c</columns>
        <columns>Elected__c</columns>
        <columns>Employer__c</columns>
        <columns>Nomination_Status__c</columns>
        <columns>Action_Needed__c</columns>
        <columns>Candidate_Office_Title__c</columns>
        <columns>District_2017__c</columns>
        <columns>Constituency__c</columns>
        <columns>Constituency_Name1__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Election_Date__c</field>
            <operation>equals</operation>
            <value>3/31/2018</value>
        </filters>
        <label>2018 Vacancy Election - 1</label>
        <language>en_US</language>
    </listViews>
</CustomObject>